@@ -1,3 +1,8 @@
+2004-10-25  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/procman.c: static const popt.
+	* src/procman.h: Changed cpu_initialized type to gboolean.
+
 2004-10-24  Benoît Dejean  <tazforever@dlfp.org>
 
 	* src/proctable.c: (refresh_list): s/g_list_prepend/g_list_append/
